feat: update seed, implement user invite endpoint
